--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -2,5 +2,12 @@
     "about": {
         "title": "About me",
         "description": "This is a brief description of myself."
+    },
+    "layout": {
+        "developer": "Full Stack Developer",
+        "lang": "Language"
+    },
+    "resume": {
+        "example": "Example resume"
     }
 }
