--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -2,5 +2,12 @@
     "about": {
         "title": "Sobre mi",
         "description": "Esta es una descripción de mi."
+    },
+    "layout": {
+        "developer": "Desarrollador Full Stack",
+        "lang": "Idioma"
+    },
+    "resume": {
+        "example": "Ejemplo resumen"
     }
 }
