Se agrega estilos con tailwind

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -5,7 +5,8 @@
     },
     "layout": {
         "developer": "Full Stack Developer",
-        "lang": "Language"
+        "lang": "Language",
+        "theme": "Theme"
     },
     "resume": {
         "example": "Example resume"
