--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -5,7 +5,8 @@
     },
     "layout": {
         "developer": "Desarrollador Full Stack",
-        "lang": "Idioma"
+        "lang": "Idioma",
+        "theme": "Tema"
     },
     "resume": {
         "example": "Ejemplo resumen"
