Se aplica header, corregit bug visual con listas desplegables

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -8,6 +8,11 @@
         "lang": "Language",
         "theme": "Theme"
     },
+    "navbar": {
+        "light": "Light",
+        "dark": "Dark",
+        "custom": "Custom"
+    },
     "resume": {
         "example": "Example resume"
     }
