--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -8,6 +8,11 @@
         "lang": "Idioma",
         "theme": "Tema"
     },
+    "navbar": {
+        "light": "Claro",
+        "dark": "Oscuro",
+        "custom": "Personalizado"
+    },
     "resume": {
         "example": "Ejemplo resumen"
     }
